<resources>
    <string name="app_name">Drawing</string>

    <string name="undo">Undo</string>
    <string name="eraser">Eraser</string>
    <string name="brush">Brush</string>
    <string name="color">Color</string>
    <string name="more">More</string>

    <string name="new_page">New Page</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>


    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="gray">Gray</string>

    <string name="last_size">Last_Size</string>
    <string name="size_1">Size_1</string>
    <string name="size_2">Size_2</string>
    <string name="size_3">Size_3</string>
    <string name="size_4">Size_4</string>
    <string name="size_5">Size_5</string>
    <string name="size_6">Size_6</string>
    <string name="size_7">Size_7</string>

    <string name="title_activity_drawing_yourself">DrawingYourself</string>
    <string name="you_can_add_any_picture">You can add any picture</string>
    <string name="choose_picture">Choose picture</string>
</resources>
