<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/newPage"
        android:orderInCategory="1"
        android:title="@string/new_page" />
    <item
        android:id="@+id/open"
        android:orderInCategory="2"
        android:title="@string/open" />
    <item
        android:id="@+id/save"
        android:orderInCategory="3"
        android:title="@string/save" />
    <item
        android:id="@+id/share"
        android:orderInCategory="4"
        android:title="@string/share" />
    <item
        android:id="@+id/about"
        android:orderInCategory="5"
        android:title="@string/about" />
    <item
        android:id="@+id/exit"
        android:orderInCategory="6"
        android:title="@string/exit" />
</menu>